# XGraph

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  main.cpp
doc/: index.html
doc/html/: annotated.html  annotated_dup.js  classes.html  classxgraph_1_1DiGraph-members.html  classxgraph_1_1DiGraph.html  classxgraph_1_1DiGraph.js  classxgraph_1_1Graph-members.html  classxgraph_1_1Graph.html  classxgraph_1_1Graph.js  classxgraph_1_1XEdge-members.html  classxgraph_1_1XEdge.html  classxgraph_1_1XEdge.js  classxgraph_1_1XNode-members.html  classxgraph_1_1XNode.html  classxgraph_1_1XNode.js  concepts.html  concepts.js  conceptxgraph_1_1EdgeType.html  conceptxgraph_1_1NodePtrType.html  conceptxgraph_1_1NodeType.html  conceptxgraph_1_1UserDataType.html  dir_0233dfbc053e9f1028d15a2424a2547d.html  dir_0233dfbc053e9f1028d15a2424a2547d.js  dir_32fdf9c998309037fc472c5c059df086.html  dir_32fdf9c998309037fc472c5c059df086.js  dir_87ed85a629758e88b2618fbc45490feb.html  dir_87ed85a629758e88b2618fbc45490feb.js  doxygen_crawl.html  edge_8hpp_source.html  files.html  files_dup.js  functions.html  functions_func.html  graph_8hpp_source.html  hierarchy.html  hierarchy.js  index.html  navtreedata.js  navtreeindex0.js  node_8hpp_source.html  (+6 more)
doc/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  concepts_0.js  concepts_1.js  concepts_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  pages_0.js  searchdata.js
include/: edge.h  edge.hpp  node.h  node.hpp  type_concepts.h  type_concepts.hpp  utils.h  utils.hpp  xgraph  xgraph.h  xgraph.hpp  xgraph_impl.hpp
include/algorithm/: shortest_path.hpp  traversal.hpp
include/structure/: edge.hpp  graph.hpp  node.hpp  type_concepts.hpp  utils.hpp  xgraph.hpp  xgraph_impl.hpp
include/utils/: file_utils.hpp
include/visualize/: show_tikz.hpp
scripts/: auto_update.sh  load_data.py  load_data.sh  run_benchmark.py  share_in_docker.sh
tests/: CMakeLists.txt  digraph_test.cpp  graph_test.cpp  graph_test.hpp  run_benchmark.py  shortest_path_test.hpp  structure_test.hpp  test_shortest_path.cpp  test_structure.cpp  test_traversal.cpp  test_user_data.cpp  test_visualize.cpp  tests.cpp
xgraph/: xgraph
xgraph/algorithm/: shortest_path.hpp  traversal.hpp
xgraph/structure/: edge.hpp  graph.hpp  node.hpp  type_concepts.hpp  type_traits.hpp  utils.hpp
